--- a/ansible/files/conf.json.j2
+++ b/ansible/files/conf.json.j2
@@ -2,9 +2,9 @@
   "db": {
     "driver" : "pgsql",
     "host" : "localhost",
-    "dbname" : "db_dev",
-    "login" : "login",
-    "pwd" : "password"
+    "dbname" : "{{ db_name }}",
+    "login" : "{{ db_user }}",
+    "pwd" : "{{ db_password }}"
   },
   "debug" : 1,
   "api_version" : "0.1",
